fix spacing on board page

--- a/app/assets/stylesheets/external/category.scss
+++ b/app/assets/stylesheets/external/category.scss
@@ -5,9 +5,9 @@
   position: relative;
   height: 250px;
   display: table;
-  margin-bottom: 20px;
 }
 .topic_desc_section {
+  margin-top: 20px;
   &.full_height {
     .main_text {
       max-height: none;
