--- a/app/assets/stylesheets/internal/tiles.css.scss
+++ b/app/assets/stylesheets/internal/tiles.css.scss
@@ -4,7 +4,7 @@
 #tile_wall {
   background: $tile-wall-bg;
   padding:.5em 0 1em;
-  margin:-2em 0 2em 0;
+  // margin:-2em 0 2em 0;
   a, a:link, a:visited {@include font-semibold;}
   #tile_links {
     text-align: center;
